--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <!--This is a comment. It won't show up in your browser, only in the page source-->
   <h1>Hello, world</h1>
   <p> your content here</p>
-  
+  <img src="bb8.jpg" alt="A picture of a cute Star Wars droid" />
 </body>
 
 </html>
